--- a/transformasi/refleksi.html
+++ b/transformasi/refleksi.html
@@ -71,7 +71,7 @@
             <p>Sudahkah kalian bercermin hari ini? Apabila kalian perhatikan ketika bercermin, kalian melihat bahwa bayangan diri di cermin selalu mempunyai ukuran yang sama dengan diri sendiri. Sama halnya jarak diri ke cermin sama dengan jarak bayangan ke cermin.
             </p>
             <p>Perhatikan gambar berikut <br>
-                <img src="/transformasi/img/refleksi.png" alt="refleksi"> <br>
+                <img src="/transformasi/img/refleksi.png" alt="refleksi" class="img-fluid"> <br>
                 Jika \(P'\) merupakan bayangan titik \(P\) oleh pencerminan terhadap garis \(l\) maka :
                 <ol>
                     <li>\(PP' \perp  l\)</li>
@@ -296,7 +296,7 @@ Bila dituliskan dalam bentuk matriks diperoleh: <br>
           <div class="col">
             <div class="d-grid gap-2 d-md-block position-relative">
               <a href="/transformasi/translasi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Translasi</button></a>
-              <a href="#"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Rotasi</button></a>
+              <a href="/transformasi/rotasi.html"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Rotasi</button></a>
             </div>
           </div>
         </div>
@@ -305,7 +305,7 @@ Bila dituliskan dalam bentuk matriks diperoleh: <br>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- footer start -->
-    <footer class="bg-primary text-center text-white p-1">
+    <footer class="bg-primary text-center text-white fixed-bottom">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
