--- a/transformasi/index.html
+++ b/transformasi/index.html
@@ -78,7 +78,7 @@
               </a>
               <a href="/transformasi/translasi.html" class="list-group-item list-group-item-action">TRANSLASI</a>
               <a href="/transformasi/refleksi.html" class="list-group-item list-group-item-action">REFLEKSI</a>
-              <a href="#" class="list-group-item list-group-item-action">ROTASI</a>
+              <a href="/transformasi/rotasi.html" class="list-group-item list-group-item-action">ROTASI</a>
               <a href="#" class="list-group-item list-group-item-action">DILATASI</a>
               <a href="#" class="list-group-item list-group-item-action">TRANSFORMASI MATRIKS</a>
               <a href="#" class="list-group-item list-group-item-action">SOAL-SOAL TRANSFORMASI GEOMETRI</a>
