--- a/transformasi/index.html
+++ b/transformasi/index.html
@@ -79,9 +79,10 @@
               <a href="/transformasi/translasi.html" class="list-group-item list-group-item-action">TRANSLASI</a>
               <a href="/transformasi/refleksi.html" class="list-group-item list-group-item-action">REFLEKSI</a>
               <a href="/transformasi/rotasi.html" class="list-group-item list-group-item-action">ROTASI</a>
-              <a href="#" class="list-group-item list-group-item-action">DILATASI</a>
-              <a href="#" class="list-group-item list-group-item-action">TRANSFORMASI MATRIKS</a>
-              <a href="#" class="list-group-item list-group-item-action">SOAL-SOAL TRANSFORMASI GEOMETRI</a>
+              <a href="/transformasi/dilatasi.html" class="list-group-item list-group-item-action">DILATASI</a>
+              <a href="/transformasi/kurva.html" class="list-group-item list-group-item-action">TRANSFORMASI SUATU KURVA</a>
+              <a href="/transformasi/komposisi.html" class="list-group-item list-group-item-action">TRANSFORMASI KOMPOSISI</a>
+              <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">SOAL-SOAL TRANSFORMASI GEOMETRI</a>
             </div>
           </div>
         </div>
