--- a/transformasi/kurva.html
+++ b/transformasi/kurva.html
@@ -24,7 +24,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <title>Dilatasi</title>
+    <title>transformasi suatu kurva</title>
   </head>
   <body>
     <!-- navbar start -->
@@ -67,44 +67,14 @@
     <div class="container">
 
 <h3>
-Dilatasi (Perkalian)
+Transformasi Suatu Kurva
 </h3>
-<p> Dilatasi adalah transformasi yang mengubah jarak titik-titik dengan faktor skala (pengali) tertentu di pusat dilatasi tertentu. Jika yang didilatasikan adalah suatu bangun, maka ukuran bangun tersebut akan berubah, tetapi bentuknya tetap. Kita akan mempelajari perkalian atau dilatasi ditentukan oleh titik pusat \(O(0, 0)\) dan titik pusat \((a, b)\) faktor skala. \([O, k]\) adalah notasi dilatasi yang berpusat \(O(0, 0)\) dengan faktor skala \(k\) sedangkan \([(a, b),k]\), adalah notasi dilatasi yang berpusat di titik \((a, b)\) dengan faktor skala \(k\).</p>
-<ol>
-  <li class="fst-italic fw-bold"> Dilatasi Pusat \(O(0,0)\) dengan Faktor Skala \(k\) </li>
-     <p>
-      <img src="/transformasi/img/dilatasi1.png" alt="dilatasi1" width="300" class="img-fluid"> <br>
-      Jika \(P'\) merupakan bayangan \(P\) oleh dilatasi \([O,k] \), maka: <br>
-      \(OP'=k.OP\) <br>
-      Jadi, bayangan titik \(P(x,y)\) oleh dilatasi \([O,k]\) adalah \(P'(kx,ky) \) dan dapat juga ditulis sebagai:
-      $$P(x,y) \overset{[O,k]}{\rightarrow} P'(kx,ky)$$
-      Kita sudah ketahui bahwa bila titik \(P(x,y)\)didilatasikan terhadap titik pusat \(O(0, 0)\) dengan faktor skala \(k\), maka bayangannya adalah \(P'(kx,ky)\). Dengan demikian, diperoleh persamaan-persamaan berikut. <br>
-      \(x'=kx=kx+0.y \) <br>
-      \(y'=ky=0.x+ky\) <br>
-      Persamaan  dalam bentuk matriks <br>
-        \(\begin{align}
-        \begin{pmatrix}x'\\y' \end{pmatrix}&=\begin{pmatrix}kx+0.y \\0.x+ky \end{pmatrix} \\ &=\begin{pmatrix}k&0 \\0&k \end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix}
-        \end{align}\)
-       </p>
-<p>Jadi, matriks \(\begin{pmatrix}k&0 \\ 0&k \end{pmatrix}\) merupakan matriks yang bersesuaian dengan dilatasi terhadap titik pusat \(O(0,0)\) dengan faktor skala \(k\). </p>
-</ol>
-<div class="row p-2 justify-content-center">
-  <div class="col-md border">
-    <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 4.1 </b>
-    </div>
-    <p class="fst-italic bg-warning">Tentukan bayangan titik \(P(2,6)\) jika diputar   sebesar \(30^{\circ}\) yang searah dengan arah jarum jam dan berpusat titik \(O(0,0)\) 
-    </p>
-    <b>JAWABAN</b> <br>
-    <p>
-    ccccccccccccccccccccccccccccc
-    </p>
-  </div>
-</div>
+                
 
 
       <div class="d-grid gap-2 d-md-block position-relative">
-        <a href="/transformasi/rotasi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Rotasi</button></a>
-        <a href="/transformasi/komposisi.html"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Transformasi Kurva</button></a>
+        <a href="/transformasi/dilatasi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Dilatasi</button></a>
+        <a href="/transformasi/komposisi.html"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Komposisi</button></a>
         </div>
 </div>
 </section>
