--- a/transformasi/translasi.html
+++ b/transformasi/translasi.html
@@ -51,9 +51,11 @@
                   <a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a>
                 </li>
                 <li><a class="dropdown-item" href="/transformasi/refleksi.html">Refleksi</a></li>
-                <li><a class="dropdown-item" href="#">Rotasi</a></li>
-                <li><a class="dropdown-item" href="#">Dilatasi</a></li>
-                <li><a class="dropdown-item" href="#">Komposisi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/rotasi.html">Rotasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/dilatasi.html">Dilatasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi Kurva</a></li>
+                <li><a class="dropdown-item" href="/transformasi/komposisi.html">Komposisi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/daftarsoal.html">Latihan Soal</a></li>
               </ul>
             </li>
           </ul>
