--- a/transformasi/refleksi.html
+++ b/transformasi/refleksi.html
@@ -251,7 +251,7 @@ Bila dituliskan dalam bentuk matriks diperoleh: <br>
 </div>
             </ol>
 
-<div class="row justify-content-center">
+<div class="row justify-content-center ms-3 mb-2">
     <div class="col-md border">
         <div class="badge bg-danger text-wrap fs-6" style="width: 8rem"><b> Evaluasi 2.1 </b></div>
     <ol>
