--- a/transformasi/rotasi.html
+++ b/transformasi/rotasi.html
@@ -162,7 +162,7 @@ $$\begin{pmatrix}x' \\ y' \end{pmatrix}=\begin{pmatrix}\cos \alpha & -\sin \alph
 </div>
 </ol>
 
-<div class="row justify-content-center">
+<div class="row justify-content-center ms-4">
   <div class="col-md border">
       <div class="badge bg-danger text-wrap fs-6" style="width: 8rem"><b> Evaluasi 3.1 </b></div>
   <ol>
