--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </style>
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
   </head>
   <body id="home">
     <!-- navbar start -->
