--- a/matriks/operasimatriks.html
+++ b/matriks/operasimatriks.html
@@ -21,7 +21,8 @@
     <title>Operasi Matriks</title>
       <!-- My CSS -->
       <link rel="stylesheet" href="style.css" />
-
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- navbar start -->
