--- a/matriks/pengertian.html
+++ b/matriks/pengertian.html
@@ -21,7 +21,8 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
     <title>Pengertian Matriks</title>
   </head>
   <body>
