--- a/matriks/perkalian.html
+++ b/matriks/perkalian.html
@@ -19,7 +19,8 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <title>Perkalian Matriks</title>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
