--- a/daftarisimateri.html
+++ b/daftarisimateri.html
@@ -32,6 +32,8 @@
         align-items: center;
       }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
   </head>
   <body id="home">
     <!-- navbar start -->
