--- a/matriks/jenismatriks.html
+++ b/matriks/jenismatriks.html
@@ -23,7 +23,8 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
     <title>Jenis-jenis Matriks</title>
   </head>
   
