--- a/matriks/penerapan.html
+++ b/matriks/penerapan.html
@@ -37,6 +37,8 @@
     </style>
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- navbar start -->
