--- a/transformasi/index.html
+++ b/transformasi/index.html
@@ -21,7 +21,8 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
     <title>Transformasi Geometri</title>
   </head>
   <body>
