--- a/transformasi/translasi.html
+++ b/transformasi/translasi.html
@@ -25,6 +25,8 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <title>Translasi</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- navbar start -->
