--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWKYNJM30L"></script>
     <script>
@@ -305,7 +308,9 @@ gsap.from('.display-4',{duration:1, x:-60, opacity:0, delay:0.5, ease:'back'})
       });
     </script>
       
-
+      <amp-auto-ads type="adsense"
+      data-ad-client="ca-pub-4649430696681971">
+</amp-auto-ads>
 
   </body>
 </html>
