--- a/matriks/duamatriks.html
+++ b/matriks/duamatriks.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
@@ -219,5 +222,8 @@
     </footer>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <amp-auto-ads type="adsense"
+    data-ad-client="ca-pub-4649430696681971">
+</amp-auto-ads>
   </body>
 </html>
