--- a/matriks/soal/kisikisiulangan.html
+++ b/matriks/soal/kisikisiulangan.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
@@ -588,5 +591,8 @@
       </p>
     </footer>
     <!-- footer end -->
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4649430696681971">
+</amp-auto-ads>
   </body>
 </html>
