--- a/matriks/soal/soalmatriks1.html
+++ b/matriks/soal/soalmatriks1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
@@ -574,5 +577,8 @@
           .catch((error) => console.error('Error!', error.message));
       });
     </script>
+    <amp-auto-ads type="adsense"
+    data-ad-client="ca-pub-4649430696681971">
+</amp-auto-ads>
   </body>
 </html>
