--- a/transformasi/rotasi.html
+++ b/transformasi/rotasi.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWKYNJM30L"></script>
     <script>
@@ -209,5 +212,8 @@ $$\begin{pmatrix}x' \\ y' \end{pmatrix}=\begin{pmatrix}\cos \alpha & -\sin \alph
       </p>
     </footer>
     <!-- footer end -->
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4649430696681971">
+</amp-auto-ads>
   </body>
 </html>
