--- a/matriks/soal/soalmatriks1.html
+++ b/matriks/soal/soalmatriks1.html
@@ -52,7 +52,18 @@
     </nav>
     <!-- navbar end -->
 
-    <h1>UJian Online</h1>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
+<!-- iklan1 -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-4649430696681971"
+    data-ad-slot="2843433688"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <!-- START FORM KUIS -->
     <section id="kontak" style="padding-top: 2rem">
@@ -88,6 +99,18 @@
                 </select>
               </div>
               <hr />
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+     crossorigin="anonymous"></script>
+<!-- iklan1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4649430696681971"
+     data-ad-slot="2843433688"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
               <!-- SOAL 1 -->
               <ol type="1">
                 <li>
@@ -204,6 +227,17 @@
                 </li>
                 <hr />
                 <!-- -----------------------END SOAL NO 5-------------------------------------------------------------------------- -->
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-4649430696681971"
+     data-ad-slot="4050334452"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 <!------------------------------- Start SOAL NO 6 --------------------------------------------------------------------->
                 <li>
                   Matriks \(A=\begin{pmatrix}5&a\\b&3c \end{pmatrix}\) dan \(B=\begin{pmatrix}2a+2&a+8\\a+4&3a-b \end{pmatrix}\). Jika \(2A=B^T\), maka nilai \(c=...\)
@@ -345,6 +379,7 @@
     </section>
     <!-- SOAL KUIS END-->
     <hr />
+   
     <!----------------------------------------------------------------------------------------------------------------------------->
     <!--------------------------------------SCRIPT BUAT LATIHAN SOAL--------------------------------------------------------------->
     <!-- <script>
@@ -541,7 +576,7 @@
     <footer class="bg-primary text-center text-white fixed-bottom">
       <p>
         Created with
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
         </svg>
         by <a href="" class="text-white fw-bold">I Putu Darma Putra</a>
