--- a/matriks/soal/soalmatriks4.html
+++ b/matriks/soal/soalmatriks4.html
@@ -52,7 +52,18 @@
     </nav>
     <!-- navbar end -->
 
-    <h1>UJian Online</h1>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+    crossorigin="anonymous"></script>
+<!-- iklan1 -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-4649430696681971"
+    data-ad-slot="2843433688"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <!-- START FORM KUIS -->
     <section id="kontak" style="padding-top: 2rem">
@@ -88,6 +99,18 @@
                 </select>
               </div>
               <hr />
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+     crossorigin="anonymous"></script>
+<!-- iklan1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4649430696681971"
+     data-ad-slot="2843433688"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
               <ol type="1">
                 <li>Jika \(\begin{pmatrix}4^{x+2y}&0 \\ 2 & 3x-2 \end{pmatrix}=\begin{pmatrix}8&0 \\ 2&7 \end{pmatrix}\), maka \(x+y=...\)</li>
                 <input type="radio" name="soal1" value="0" />
@@ -277,6 +300,17 @@
                 \(\frac{4}{3}\)
                 <hr />
                 <!-- =====SOAL NO 12======================================================================= -->
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-4649430696681971"
+     data-ad-slot="4050334452"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 <li>Nilai \(a\) yang memenuhi 
                   $$\begin{pmatrix}a&b \\ c&d \end{pmatrix}\begin{pmatrix}1&2 \\ 2&1 \end{pmatrix}-\begin{pmatrix}2&1 \\ 4&3 \end{pmatrix}=\begin{pmatrix}0&0 \\ 1&2 \end{pmatrix} $$ adalah . . .
                 </li>
