--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <li>
                   <a class="dropdown-item" href="#kontak">Kontak</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="/transformasi/tes.html">Tes</a>
+                </li>
               </ul>
             </li>
           </ul>
