--- a/transformasi/tes.html
+++ b/transformasi/tes.html
@@ -29,6 +29,10 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
     crossorigin="anonymous"></script>
     <title>transformasi suatu kurva</title>
+
+    <script src="https://tally.so/widgets/embed.js"></script>
+
+
   </head>
   <body>
     <!-- navbar start -->
@@ -70,15 +74,11 @@
 <section style="padding-top: 6rem; padding-bottom: 7rem">
     <div class="container">
 <!-- KONTEN BUAT DISINI -->
-
-
-
-
-
-      <div class="d-grid gap-2 d-md-block position-relative">
-        <a href="/transformasi/dilatasi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Dilatasi</button></a>
-        <a href="/transformasi/komposisi.html"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Komposisi</button></a>
-        </div>
+<div class="row">
+  <div class="col">
+    <iframe data-tally-src="https://tally.so/embed/wobNqb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0" title="MATRIKS"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+  </div>
+</div>
 </div>
 </section>
 
