--- a/matriks/soal.html
+++ b/matriks/soal.html
@@ -97,7 +97,7 @@
           <a href="/matriks/soal/soalmatriks2.html" class="list-group-item list-group-item-action">Soal Matriks II</a>
           <a href="/matriks/soal/soalmatriks3.html" class="list-group-item list-group-item-action">Soal Matriks III</a>
           <a href="/matriks/soal/soalmatriks4.html" class="list-group-item list-group-item-action">Soal Matriks IV</a>
-          <a href="/matriks/soal/kisikisiulangan.html" class="list-group-item list-group-item-action disabled">Kisi-kisi Ulangan Matriks</a>
+          <a href="/matriks/soal/kisikisiulangan.html" class="list-group-item list-group-item-action">Kisi-kisi Ulangan Matriks</a>
           <a class="list-group-item list-group-item-action disabled">Soal Lainnya</a>
         </div>
       </div>
