--- a/transformasi/tes.html
+++ b/transformasi/tes.html
@@ -76,7 +76,8 @@
 <!-- KONTEN BUAT DISINI -->
 <div class="row">
   <div class="col">
-    <iframe data-tally-src="https://tally.so/embed/wobNqb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0" title="MATRIKS"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+    <script async src="https://tally.so/widgets/embed.js"></script>
+    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1&dynamicHeight=1" width="100%" height="1" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
   </div>
 </div>
 </div>
