--- a/matriks/ulangan/3WC4Gq6pan.html
+++ b/matriks/ulangan/3WC4Gq6pan.html
@@ -20,7 +20,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <!-- mathjax -->
@@ -28,7 +27,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <title>ULANGAN MATRIKS</title>
-
+    <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body id="home">
     <!-- navbar start -->
@@ -50,16 +49,16 @@
     </nav>
     <!-- navbar end -->
 
-    <section style="padding-top: 12rem;">
+    <section style="padding-top: 12rem; width: 100%;" >
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <script async src="https://tally.so/widgets/embed.js"></script>
-                    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1&dynamicHeight=1" width="100%" height="346" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+                    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
                 </div>
             </div>
         </div>
     </section>
+    <section></section>
     
     <!-- footer start -->
     <footer class="bg-primary text-center text-white fixed-bottom">
