--- a/matriks/ulangan/3WC4Gq6pan.html
+++ b/matriks/ulangan/3WC4Gq6pan.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+                    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
     <section></section>
     
     <!-- footer start -->
-    <footer class="bg-primary text-center text-white fixed-bottom">
+    <footer class="bg-primary d-flex justify-content-center">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
