--- a/matriks/index.html
+++ b/matriks/index.html
@@ -99,6 +99,9 @@
               <a href="/matriks/invers.html" style="text-decoration: none" ><button type="button" class="list-group-item list-group-item-action">Invers Matriks</button> </a>
               <a href="/matriks/penerapan.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Penerapan Matriks</button> </a>
               <a href="/matriks/soal.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Kumpulan Soal Latihan</button> </a>
+              <a href="/matriks/ulangan/xiips1.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action"><b>Ulangan Matriks XI IPS 1</b></button> </a>
+              <a href="/matriks/ulangan/xiips2.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action"><b>Ulangan Matriks XI IPS 2</b></button> </a>
+              <a href="/matriks/ulangan/xiips3.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action"><b>Ulangan Matriks XI IPS 3</b></button> </a>
             </div>
           </div>
         </div>
