--- a/matriks/ulangan/3WC4Gq6pan.html
+++ b/matriks/ulangan/3WC4Gq6pan.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME LINK</a>
+              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/xiips1.html">HOME XI IPS 1</a>
             </li>
           </ul>
         </div>
@@ -49,11 +49,11 @@
     </nav>
     <!-- navbar end -->
 
-    <section style="padding-top: 12rem; width: 100%;" >
+    <section style="padding-top: 7rem;" >
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+                    <iframe data-tally-src="https://tally.so/embed/3xXbAd?transparentBackground=1" width="100%" height="780" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 01"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
                 </div>
             </div>
         </div>
@@ -70,6 +70,8 @@
         by <a href="https://www.facebook.com/darmaputra.esc" class="text-white fw-bold fst-italic" style="text-decoration: none">I Putu Darma Putra</a>
       </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- footer end -->
     <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-4649430696681971">
