--- a/matriks/ulangan/EyXYuKEGfq.html
+++ b/matriks/ulangan/EyXYuKEGfq.html
@@ -20,7 +20,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <!-- mathjax -->
@@ -28,6 +27,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <title>ULANGAN MATRIKS</title>
+    <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body id="home">
     <!-- navbar start -->
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME LINK</a>
+              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/xiips1.html">HOME XI IPS 1</a>
             </li>
           </ul>
         </div>
@@ -49,9 +49,20 @@
     </nav>
     <!-- navbar end -->
 
-  
+    <section style="padding-top: 7rem;" >
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <!-- ================================tempatkan dibawah ini soalnya-->
+                    <iframe data-tally-src="https://tally.so/embed/3ja4NJ?transparentBackground=1" width="100%" height="780" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 05"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section></section>
+    
     <!-- footer start -->
-    <footer class="bg-primary text-center text-white fixed-bottom">
+    <footer class="bg-primary d-flex justify-content-center">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
@@ -60,6 +71,8 @@
         by <a href="https://www.facebook.com/darmaputra.esc" class="text-white fw-bold fst-italic" style="text-decoration: none">I Putu Darma Putra</a>
       </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- footer end -->
     <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-4649430696681971">
