--- a/matriks/ulangan/xiips1.html
+++ b/matriks/ulangan/xiips1.html
@@ -52,8 +52,9 @@
     <section style="padding-top: 7rem; padding-bottom: 3rem;" >
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6">
-<h3> Silahkan klik link pada nama kalian masing-masing untuk mengakses soal ulangan </h3>
+              <h3 class="text-center"> Silahkan klik link pada nama kalian masing-masing untuk mengakses soal ulangan </h3>
+                <div class="col-md-8">
+
 <div class="list-group">
     <button type="button" class="list-group-item list-group-item-action active text-center" aria-current="true">
       NAMA KELAS XI IPS 1
